--- a/gestionador-frontend/src/interface/Register.css
+++ b/gestionador-frontend/src/interface/Register.css
@@ -1,4 +1,4 @@
-.login{
+.register{
     
     justify-content: center;
     align-items: center;
@@ -9,17 +9,18 @@
     background-color: #2e86c1 ;
     border-radius: 10px;
 }
-.login-form{
-    gap:5px;
+.encabezado-register{
+    font-size: 30px;
+    font-weight: bold;
+    font-family: Arial;
+    margin-bottom: 15px;
+    margin-top: 10px;
+}
+.register-form{
+    margin-top: 10px;
+    gap:10px;
     display: flex;
     flex-direction: column;
     width: auto;
     height: auto;
-}
-.encabezado-text{
-    font-size: 30px;
-    font-weight: bold;
-    font-family: Arial;
-    margin-top: -10px;
-    margin-bottom: 50px;
 }
