--- a/gestionador-frontend/src/main.css
+++ b/gestionador-frontend/src/main.css
@@ -1,7 +1,8 @@
-body{
+@import "tailwindcss";
+/* body{
     background: #7fb3d5;
     display: grid;
     min-height: 100vh;
     place-content: center;
     margin: 0;
-}
+} */
