--- a/gestionador-frontend/src/page/Login.css
+++ b/gestionador-frontend/src/page/Login.css
@@ -1,4 +1,4 @@
-.login{
+/* .login{
     
     justify-content: center;
     align-items: center;
@@ -22,4 +22,4 @@
     font-family: Arial;
     margin-top: -10px;
     margin-bottom: 50px;
-}
+} */
