--- a/gestionador-frontend/src/page/Register.css
+++ b/gestionador-frontend/src/page/Register.css
@@ -1,4 +1,4 @@
-.register{
+/* .register{
     
     justify-content: center;
     align-items: center;
@@ -23,4 +23,4 @@
     flex-direction: column;
     width: auto;
     height: auto;
-}
+} */
